--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "express": "^4.15.4",
     "mongojs": "^2.5.0",
     "mongoose": "^5.0.4",
