--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14",
-    "semantic-ui-css": "^2.2.14",
-    "semantic-ui-react": "^0.78.2"
+    "react-scripts": "1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
