--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "cd client && npm run build",
     "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "installDeps": "yarn && cd client && yarn"
+    "installDeps": "yarn && cd client && yarn",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"  
   },
   "author": "",
   "license": "ISC",
